# Playground-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
dep/glad/src/: glad.c
pengine/: CMakeLists.txt  pengine.h
pengine/core/: Application.cpp  EntryPoint.h  application.cpp  application.h  logger.h  window.h
pengine/dep/glad/: CMakeLists.txt
pengine/dep/glad/include/glad/: glad.h  glad_wgl.h
pengine/dep/glad/src/: glad_wgl.c
pengine/engine/core/: application.cpp  application.h  entry_point.h  logger.cpp  logger.h  window.h
pengine/platform/windows/: WindowWin32.cpp  WindowWin32.h  window_win32.cpp  window_win32.h
samples/: CMakeLists.txt  test_app.cpp
samples/BasicTriangle/: BasicTriangle.cpp  CMakeLists.txt
samples/SnakeOpenGl/: CMakeLists.txt  SnakeOpenGl.cpp
